bynkc/tests/fixtures/negative/129_export_undeclared_capability/src/platform/bad.karn
context platform.bad

exports capability { Nope }

capability Clock {
  fn now() -> Effect[Int]
}

provides Clock = SystemClock {
  fn now() -> Effect[Int] {
    0
  }
}
